# VW_Flash

./: .gitignore  LICENSE  README.md  VW_Flash.py  VW_Flash_GUI.py  VW_Flash_GUI.spec  __init.py__  checksumsimos18.py  docs.md  encryptsimos18.py  extract_software_info.py  extractodx.py  extractodxsimos18.py  flashsimos18.py  gui_config.json  log_config.yaml  log_parameters_22.csv  log_parameters_3E.csv  logging.conf  lzsscompress.py  parameters22.yaml  parameters3E.yaml  patch.md  prepareblock.sh  pyproject.toml  requirements.txt  rsadecodesimos18.py  setup.py  volkswagen_security.py
.github/workflows/: python-app.yml
data/: VW_Flash.key  VW_Flash.pub  box_codes.csv  dtcs.csv  frf.key
data/esp32/: README.md
docs/: cli.md  docs.md  dsg.md  patch.md  rsa.md  windows.md
frf/: decryptfrf.py
lib/: README.md  __init.py__  bcd.py  binfile.py  ble_isotp_connection.py  checksum.py  connections.py  constants.py  decryptdsg.py  dq381_checksum.py  dq381_flash_utils.py  dsg_checksum.py  dsg_flash_utils.py  dtc_handler.py  encrypt.py  extract_flash.py  fake_connection.py  fastcrc.py  flahser.py  flash_uds.py  flasher.py  haldex_binfile.py  haldex_checksum.py  haldex_flash_utils.py  j2534.py  j2534_connection.py  legacysimos.py  lzss.py  lzssHelper.py  lzss_helper.py  patch_cboot.py  resource_helper.py  signature_tools.py  simos_flash_utils.py  simos_hsl.py  simos_uds.py  workshop_code.py
logs/: config.yaml  log_config.yaml  log_parameters_3E.csv  parameters.yaml
lzss/: LICENSE  README  getopt.c  getopt.h  lzss.c
tests/: test_prepare.py  test_volkswagen_security.py
(+35 files in other folders)
